--- a/custom_components/hivi_speaker/manifest.json
+++ b/custom_components/hivi_speaker/manifest.json
@@ -1,11 +1,11 @@
 {
-  "domain": "hivi_speaker",
-  "name": "HiVi Speaker",
-  "version": "0.1.0",
-  "codeowners": ["@swansmart"],
-  "config_flow": true,
-  "dependencies": ["dlna_dms"],
-  "documentation": "https://github.com/swansmart/hivi_speaker",
-  "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/swansmart/hivi_speaker/issues"
+    "codeowners": ["@swansmart"],
+    "config_flow": true,
+    "dependencies": ["dlna_dms"],
+    "documentation": "https://github.com/swansmart/hivi_speaker",
+    "domain": "hivi_speaker",
+    "iot_class": "local_polling",
+    "issue_tracker": "https://github.com/swansmart/hivi_speaker/issues",
+    "name": "HiVi Speaker",
+    "version": "0.1.0"
 }
